# google_drive_mcp

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: test.yml
google_drive_mcp/: __init__.py  auth.py  server.py
tests/: __init__.py  conftest.py  test_auth.py  test_integration.py  test_server.py
